# cmake-header-only-lib-template

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  project_info  run_tests.sh
cmake/: FetchGoogleTest.cmake
include/: CMakeLists.txt
src/: CMakeLists.txt
tests/: CMakeLists.txt
